--- a/404.html
+++ b/404.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Redirecting to main site</title>
-    <meta
-      http-equiv="refresh"
-      content="0; URL='/choose_your_camper/#'+location.pathname.slice(1)+location.search"
-    />
-    <link
-      rel="canonical"
-      href="https://podmaskov.github.io/choose_your_camper/"
-    />
+    <script>
+      sessionStorage.redirect = location.href;
+    </script>
+    <meta http-equiv="refresh" content="0;URL='/'" />
   </head>
   <body>
-    Redirecting to main site....
+    Redirecting to main site...
   </body>
 </html>
